doing initial setting up for website, including some styling. Pages for all four tabs, navbar, etc.

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "vite-plugin-eslint": "^1.8.1"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.18.0",
     "axios": "^1.6.8",
     "immer": "^10.0.4",
     "jquery": "^3.7.1",
