--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vitejs/plugin-react": "^4.2.1",
     "antd": "^5.18.0",
     "axios": "^1.6.8",
+    "emailjs-com": "^3.2.0",
     "immer": "^10.0.4",
     "jquery": "^3.7.1",
     "lodash.debounce": "^4.0.8",
